tests/ui/rfcs/rfc-2091-track-caller/only-for-fns.stderr
error: the `track_caller` attribute cannot be used on structs
  --> $DIR/only-for-fns.rs:1:3
   |
LL | #[track_caller]
   |   ^^^^^^^^^^^^
   |
   = help: the `track_caller` attribute can only be applied to functions

error: aborting due to 1 previous error

