tests/ui/rfcs/rfc-2091-track-caller/only-for-fns.rs
#[track_caller]
struct S;
//~^^ ERROR attribute should be applied to a function definition

fn main() {}
